--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  height: 100%;
+}
+body {
+  background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+  height: 100%;
+}
+
+.container {
+  max-width: 960px;
+}
+
+.pricing-header {
+  max-width: 700px;
+}
+
+.nav-icon {
+  font-size: 1.25rem;
+}
+
+.todo-list {
+  font-size: 1.5rem;
+}
