Minor styling changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,16 @@
   <header>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-        <span class="fs-4">Simplest ToDo App</span>
+        <span class="fs-4">ToDo App</span>
       </a>
 
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto nav-icon">
-        <a class="btn btn-outline-light me-3 text-dark text-decoration-none" href="https://twitter.com/ScriptBytesIO">
+        <a class="btn btn-outline-light me-3 text-dark text-decoration-none border-0 rounded-circle"
+          href="https://twitter.com/ScriptBytesIO">
           <i class="bi bi-twitter nav-icon"></i>
         </a>
-        <a class="btn btn-outline-light me-3 text-dark text-decoration-none" href="https://github.com/ScriptBytes">
+        <a class="btn btn-outline-light me-3 text-dark text-decoration-none border-0 rounded-circle"
+          href="https://github.com/ScriptBytes">
           <i class="bi bi-github nav-icon"></i>
         </a>
       </nav>
