--- a/src/app/pages/todo-list/todo-list.component.html
+++ b/src/app/pages/todo-list/todo-list.component.html
@@ -8,7 +8,7 @@
 </form>
 
 <div class="todo-list border-top">
-  <div *ngFor="let todo of todos$ | async" class="border-bottom">
+  <div *ngFor="let todo of todos$ | async" class="border-bottom p-1 todo-item">
     <div class="form-check">
       <input type="checkbox" class="form-check-input" type="checkbox" value="" id="flexCheckDefault"
         (click)="completeTodo(todo)">
