--- a/src/app/pages/todo-list/todo-list.component.html
+++ b/src/app/pages/todo-list/todo-list.component.html
@@ -3,7 +3,7 @@
   <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Add a Todo here!" name="addTodo"
       aria-label="New Todo" aria-describedby="addTodo" [(ngModel)]="newTodo.text" required>
-    <button class="btn btn-outline-secondary" type="submit" id="addTodo" (click)="addTodo(form)">Add Todo</button>
+    <button class="btn btn-outline-secondary" type="submit" id="addTodo" (click)="addTodo(form)">Add not Todo</button>
   </div>
 </form>
 
